# proy-usac

./: README.md
OWL/IA1-ONTOLOGIA/: OntoGuate_MejorTrabajo.owl
ajax/: index.html  quickstart.js  quickstart.php
asm/: compile-asm-source.txt
asm/ARQUI1-proy/: Copy of proyecto.asm  cadenas.asm  cadenas32.asm  cadenasc.bat  culero.asm  culeroc.bat  fmthlp.txt  inputest.asm  inputestc.bat  leerport.asm  leerport.bat  macros.mac  nasmhelp.txt  practica4.asm  practica4c.bat  practica4orig.asm  proyecto-copy.asm  proyecto.asm  proyectoc.bat
asm/ARQUI1-proyrojo/: redatack.ASM  serie.asm  serier.asm
asm/ARQUI2-stepper/: stepper.asm
basic/xpack/: README  pic-prog.asm  pic-prog.bas  pic-prog.hex  pic-prog.lst  rotate2.bas  rotate4.bas
c#/BASES2-videoclub/: README.TXT
c#/COMPI2-Notepad2/: Notepad2.sln
c++/ARQUI1-serialchat/: Doxyfile  Makefile  serialchat.kdevelop  serialchat.kdevelop.pcs  serialchat.kdevses
c++/COMPI1-proy1-strim/: info.txt  proy1.rar
c++/COMPI1-proy1-strim/strim-1.0-src/: Makefile.am  Makefile.in  Makefile.win  README  Strim.dev  Strim.layout  Strim_private.h  Strim_private.rc  Strim_private.res  config.h.in  configure  configure.ac  entrada.txt  funciones.c  funciones.h  lexer.l  menu.cpp  menu.hpp  parser.y  strim-lexer.c  strim-parser.c  strim-parser.h  strim.cpp  strim.hpp
c++/COMPI1-proy2-godzilla/: ast.c  info.txt
c++/EDD-mapeolex/: mapeo.cpp
c++/FS-ericle/: ChangeLog  Doxyfile  Makefile  ericle.kdevelop  ericle.kdevelop.pcs  ericle.kdevses  ericle.tag  info.txt
c++/FS-fscontent/: README
c++/FS-fscontent/src/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  cmake_install.cmake  configure.ac  fscontent.c  fscontent.h  main.c  mysqlmanager.c  mysqlmanager.h  session.c  session.h
c++/FS-practica1/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  Makefile.old  README  config.status  configure  configure.ac  practica1.c  semantic.cache
c++/FS-practica1/.deps/: practica1.P
c++/IPC2-proy1/: info.txt
c++/IPC2-proy2/: info.txt
c++/IPC2-proy3/: info.txt
c++/IPC2-tarea2/: Copy of tarea2.cpp  cated.txt  estud.txt  iotest.cpp  modelo.txt  tarea2 (17-08).cpp  tarea2(bcc).cpp  tarea2.cpp  txt.txt
c++/SO1-paconsumer/: Doxyfile  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  Productor.cpp  Productor.h  TestWindow.cpp  TestWindow.h  TestWindow.ui  buffer.cpp  buffer.h  consumidor.cpp  consumidor.h  fantasma.cpp  fantasma.h  fantasma.ui  fantasmathread.cpp  fantasmathread.h  main.cpp  main.h  moc_MainWindow.cpp  moc_TestWindow.cpp  moc_buffer.cpp  moc_cola.cpp  moc_fantasma.cpp  moc_fantasmathread.cpp  moc_main.cpp  moc_pacman.cpp  moc_pacmanthread.cpp  moc_testw.cpp  pacman.cpp  pacman.h  pacman.ui  pacmanthread.cpp  pacmanthread.h  paconsumer.kdevelop  paconsumer.kdevelop.pcs  paconsumer.kdevses  paconsumer.pro  (+3 more)
c++/SO2-kernelinfo/: Doxyfile  Makefile  kernelinfo.kdevelop  kernelinfo.kdevelop.pcs  kernelinfo.kdevses  kernelinfo.pro
c++/ipc1-proy1-PAINTKILLER/: btntst.cpp  control.h  eventos.h  paintkil.cpp  raton.h  test.txt
c++/ipc1-proy2-HAMMERFILE/: Copy of CONTROL.H  Makefile.win  Proyecto 2.dev  Proyecto 2.layout  control.h  dscmpn.cpp  estilo.xsl  eventos.h  hamrfile.cpp  old(1604.cpp  openfile.cpp  paths.txt
c++/redes1-visorBridge/: visor.c
java/ASM2-Practica1-Java3d/: build.xml  info.txt
java/COMPI2-PROY2-evilgcc/: EvilGCC  build.xml  ejemplocpp.cpp.out.c  ejemplocpp.cpp.out.c.opt.c  ejemplocpp.cpp.out.c.opt.html  ejemplocpp.cpp.out.h  ejemplopascal.pas.out.c  ejemplopascal.pas.out.h  test.pas.3dr  test2.cpp.3dr
java/COMPI2-proy1-vmw/: build.xml
java/EDD-proy1-ElectricSheet/: README.TXT  info.txt
java/LFP-proy2-OTELLO/: info.txt  o_thell_o.htm
java/ORGA-stepper/: build.xml
java/OS1-proy-ClusterTurismoDaemon/: build.xml
java/ValidadorFacturas/: README.txt  build.xml
java/db2-videoclub/: build.xml
pascal/LFP-proy1-StaticS/: ChangeLog  ChangeLog.s  Makefile  Thumbs.db  df.htm  input.txt  kuzo1.txt  out.htm  out.txt  outtst.pas  proy1 (copia).pas  proy1.pas  proy1.s  proy1bp.bak  proy1tp.pas  s.txt
python/IA-proy1-GenERIK/: GenErik.e4p  GenErik.e4q  GenErik.e4t
sql/DB1-proy1/: info.txt
sql/DB2-prac1/: Unsaved Document 1  practica1.sql  videoclub.sql
sql/DB2-proy2/: departamentos.bad  depto.ctl  detalle.bad  (+28 more)
(+975 files in other folders)
